@@ -4,6 +4,8 @@
 * WordPress 5.4 compatible.
 * Fixed a notice related to the deprecated contextual_help action.
 * Added the affiliates_admin_help_show_screen filter.
+* Added support for registration field label translation with WPML, requires WPML >= 3.2 and WPML String Translation.
+* Added the AFFILIATES_WPML constant that can be used to enable/disable support for translation with WPML (enabled by default).
 
 = 4.5.0 =
 * WordPress 5.3 compatibility retested.
